 * Tab-completion and auto-suggestion are faster, and have a timeout to avoid
   hanging on slow filesystems such as network mounts (Issue #22, thanks
   @jay-ramani)
 * Improved repaint when completing: less flickering, cleanup leftover text
 * Linux: ignore user input typed while a non-interactive command is running

Release 20240924
 * Forward-word skips over path separator
 * Fixed example-init.py (was broken since the migration to Python3)
 * Suggestion is now properly cleared from screen when searching history
 * [Windows] Fix handling of special characters within quotes (Issue #14)
 * [Windows] Use the release date as version property for PyCmd.exe

Release 20240517
 * Accept&run suggested command with Ctrl-Enter
 * Properly handle '/' when expanding selection (Shift-Up)
 * Account for renamed files in the git prompt (thanks @ufo)
 * Fix typing AltGr-combos on some keyboard layouts (thanks @ufo)

Release 20240228
 * Fix "Access is denied" printed after each command when %APPDATA% contains
   whitespace
   
Release 20240206:
 * suggest commands as you type (inspired by the fish shell)
 * support pushd/popd (thanks @Spavid04)
 * cd now behaves more similar to cmd.exe (thanks @Spavid04)

Release 20230829:
 * remove commands from the history with Ctrl-Alt-K
 * support Emacs-style keybindings (Ctrl-N/P/F/B/E/A) in interactive Windows
  (completion selection, dir history, incremental command search)

Release 20230424:
 * Abbreviate the user's "home dir" to "~" in the prompt and dir history
 * Fix SVN prompt (broken after upgrade to Python3)
 * Avoid altering the "DLL directory" for spawned commands
 * Linux port [experimental]

Release 20230202:
 * Ctrl-R for incrementally searching the command history
 * Alt-D now opens the directory history in an interactive, searchable
   Window

Release 20230114:
 * Fixed crash when cd-ing to inexistent directory

Release 20230107:
 * The PyCmd source code has been ported to Python3 (thanks github.com/UFO for